--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "exif": "^0.6.0",
     "express": "^4.17.1",
-    "g": "^2.0.1"
+    "g": "^2.0.1",
+    "sharp": "^0.23.3"
   },
   "devDependencies": {
     "cors": "^2.8.5",
